--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,17 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "jmgq/a-star": "^1.1",
-        "phpunit/phpunit": "^7.2",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
-        "symfony/lts": "^4@dev",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "phpunit/phpunit": "^7.5"
     },
     "config": {
         "bin-dir": "bin",
